# spree

./: Cargo.toml  LICENSE  README.md  build.rs  config.toml  flake.nix
src/: config.rs  main.rs
ui/: powermenu.slint
