[package]
name = "spree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.1.2"
clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1.0.195", features = ["derive"] }
slint = "1.3.2"
toml = "0.8.8"

[build-dependencies]
slint-build = "1.3.2"
